
Version 8.0.0 Developer Previews 
=================================
THIS URBAN AIRSHIP SDK IS RELEASED AS A DEVELOPER PREVIEW VERSION AND MAY CONTAIN BUGS,
ERRORS, DEFECTS, HARMFUL COMPONENTS AND MAY NOT BE COMPATIBLE WITH THE FINAL VERSION OF
THE APPLICABLE THIRD PARTY OPERATING SYSTEM. ACCORDINGLY, URBAN AIRSHIP IS PROVIDING
THE LICENSE ON AN “AS IS” BASIS AND NOT FOR USE IN PRODUCTION.

Preview 1 - July 6, 2016
------------------------
Changes:
- First iOS 10 compatibility release.
- Added support for new UNNotification classes.
- New simplified location module. Previous location module has been deprecated and will be removed in a future developer preview.
- Fixed Channel Capture for iOS 10 devices.
- Updated SwiftSample to Swift 3.0.

Developer preview APIs may not be final. Please see the README.md for migration guide
and known issues.


Version 7.2.1 - July 27, 2016
=============================
- Fixed bug that caused channel creation to potentially be disabled on first run.

Version 7.2.0 - June 1, 2016
============================
- Removed reference to the Passkit framework. This is to work around the App Store
  incorrectly showing an app `Supports Wallet` when it does not contain wallet
  capabilities (Radar #24942020).
- Replaced the wallet action with the open external URL action.
- App version segmentation now uses the short version string instead of the build number.
- Added optional navigation bar opacity to Message Center styling.

Version 7.1.2 - May 11, 2016
============================
- Fixed tint color bug affecting some Message Center toolbar items.
- Added cell tint and unread indicator color to Message Center styling.

Version 7.1.1 - May 9, 2016
===========================
- Fixed a message deletion bug in the Message Center for Sample and Swift Sample.

Version 7.1.0 - Apr 21, 2016
============================
- Added Message Center unread indicator styling.
- Added Message Center styling from a plist.
- Added Message Center filtering.