@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BB8860A7159A7E9600584445"
-               BuildableName = "libUAirship-8.0.0.dp1.a"
+               BuildableName = "libUAirship-8.0.0.dp2.a"
                BlueprintName = "AirshipLib"
                ReferencedContainer = "container:AirshipLib.xcodeproj">
             </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BB8860A7159A7E9600584445"
-            BuildableName = "libUAirship-8.0.0.dp1.a"
+            BuildableName = "libUAirship-8.0.0.dp2.a"
             BlueprintName = "AirshipLib"
             ReferencedContainer = "container:AirshipLib.xcodeproj">
          </BuildableReference>
