@@ -22,7 +22,7 @@
 //    OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 //    ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 //     
-CURRENT_PROJECT_VERSION = 8.0.0.dp1
+CURRENT_PROJECT_VERSION = 8.0.0.dp2
 
 
 RELEASE_OTHER_CFLAGS = $(inherited) -fembed-bitcode
